--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     
 		<link href="./_app/immutable/assets/0.ca5f2804.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c28fa845.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2a33ab95.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3d15d3bc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.64fa16e2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.dec37d97.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.eb695e4a.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.c5c3065e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.b040798a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.a113fb1e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.9a4daaf3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.b1b5c554.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
 <body data-sveltekit-preload-data="hover">
@@ -61,13 +61,13 @@
 
 
 
-<div class="flex justify-center items-center h-[20vh]"><button class="inline-flex items-center px-5 py-2.5 font-medium text-center text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700"><a href="/order">Перейти в заказы (демо) </a></button></div>
+<div class="flex justify-center items-center h-[20vh]"><button class="inline-flex items-center px-5 py-2.5 font-medium text-center text-white bg-primary-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-700"><a href="order">Перейти в заказы (демо) </a></button></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_1fj74fp = {
+					__sveltekit_155crj0 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c28fa845.js"),
-						import("./_app/immutable/entry/app.dec37d97.js")
+						import("./_app/immutable/entry/start.2a33ab95.js"),
+						import("./_app/immutable/entry/app.eb695e4a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
