--- a/order/index.html
+++ b/order/index.html
@@ -16,15 +16,15 @@
     
 		<link href="../_app/immutable/assets/0.ca5f2804.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c20dabff.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e68e9298.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.3856bc18.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.07ffb852.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.530ede46.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.f5397308.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.41c3139b.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.0dda4129.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.c5c3065e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.b040798a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.a113fb1e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.893de7de.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.f73313bd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/local-storage.lib.6c7646c7.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
@@ -721,7 +721,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerRryPEZ8N21DmOkXeJqKjp" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainers5ThjEkz0hVuTJZgJiegv" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -880,7 +880,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerdCsJMIdXoRuEUyUA1BK0S" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainero0cDuxiRGagMzj3Pw7iCk" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1039,7 +1039,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainernaVDuOd8uhC0a19ZnHEZj" class="flex flex-col overflow-auto max-w-[80vw]"></div>
+<div id="drawContainermw-Mw30EjHRkatPwjLBMI" class="flex flex-col overflow-auto max-w-[80vw]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1073,7 +1073,7 @@
 			
 			<script>
 				{
-					__sveltekit_13tbjiv = {
+					__sveltekit_o71r80 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1083,8 +1083,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c20dabff.js"),
-						import("../_app/immutable/entry/app.41c3139b.js")
+						import("../_app/immutable/entry/start.e68e9298.js"),
+						import("../_app/immutable/entry/app.0dda4129.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
